chore: remove unused methods